# TP1-2-IFT601-Git-replica-continuous-Integration

./: .gitignore  .gitlab-ci.yml  README.md  gitus.cpp
BuildUs/: CMakeLists.txt  main.cpp
BuildUs/BuildUsUtils/: CMakeLists.txt  buildus.cpp  buildus.h
BuildUs/tests/: CMakeLists.txt  unittests.cpp
BuildUs/tests/testsUtils/: badconfig1.buildus  badconfig2.buildus  badconfig3.buildus  config.buildus  helloworld.cpp  helloworld.h  main.cpp  meaningoflife.cpp  meaningoflife.h
git/: CMakeLists.txt  add.cpp  add.h  commit.cpp  commit.h  init.cpp  init.h  sha1.cpp
gitus/: gitus.cpp
gitus/git/: add.cpp  add.h  commit.cpp  commit.h  init.cpp  init.h  sha1.cpp  sha1.h
gitus/tests/: unittests.cpp
tests/: unittests.cpp
